feat: add tools api (data generator with faker, list collections, truncate)
